# file-mcp-smith

./: README.md  pyproject.toml
src/filesystem/: server.py
